--- a/app/views/teppanyaki/form.html.erb
+++ b/app/views/teppanyaki/form.html.erb
@@ -1,3 +1,3 @@
-<div className="container" style="margin: 70px auto ">
+<div className="container" style="margin: 70px">
 <%= javascript_pack_tag 'hello_react' %>
 </div>
