left with confirmation component of form

--- a/app/views/teppanyaki/index.html.erb
+++ b/app/views/teppanyaki/index.html.erb
@@ -4,6 +4,8 @@
 
 		<h1> The Teppanyaki Experience </h1>
 		 <p style="font-weight: 200">Enjoy a gastronomic experience in the comfort of your home hosted by a professional Teppanyaki chef. We bring to you an authentic Teppanyaki experience.</p>
+		 <p style="font-weight: 200">Uncover the rich flavors, tantalizing aromas
+		and intricate culinary traditions of Japanese Teppanyaki dining.</p>
 		<hr class="my-4" style="background-color: white">
 		<button type="button" class="btn btn-outline-light" style="width: 350px; margin: 2px auto">
 		<%= link_to 'Make a reservation', form_path %>
@@ -54,7 +56,7 @@
 				<h2>We cook in your house </h2>
 				<p>Depending on the number of people for the meal, we will setup the Teppan grill at your home. We carry 3 different Tepan grill sizes to cater to persons up to 12.</p> 
 
-				<p>The chef will arrive between one and two hours before the start time to develop the menu that you have agreed on. </p>
+				<p>The chef will arrive between one and two hours before the start time to setup the table and prepare. </p>
 			</div>		
 		</div>
 
@@ -83,5 +85,6 @@
 		</div>
 
 	</div>
+	<br/> <br/> <br/>
 </div>
 
