added devise users with additional fields

--- a/app/views/teppanyaki/index.html.erb
+++ b/app/views/teppanyaki/index.html.erb
@@ -30,10 +30,10 @@
 	      <img class="d-block w-100" src="https://i.picsum.photos/id/913/500/500.jpg" alt="First slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100" src="https://i.picsum.photos/id/9/500/500.jpg" alt="Second slide">
+	      <img class="d-block w-100" src="https://i.picsum.photos/id/575/500/500.jpg" alt="Second slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100" src="https://i.picsum.photos/id/13/500/500.jpg" alt="Third slide">
+	      <img class="d-block w-100" src="https://i.picsum.photos/id/639/500/500.jpg?hmac=72TmK0db_Z1aRXlm_bQbBdqsgBa-sFNN6vew4eSXYeI.jpg" alt="Third slide">
 	    </div>
 	  </div>
 	  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
