--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -20,8 +20,8 @@
           Login/Signup
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="../users/sign_in">Login</a>
+          <a class="dropdown-item" href="../users/sign_up">Signup</a>
         </div>
       </li>
     </ul>
