--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 
   <body>
     <%= render 'layouts/navbar' %>
+    <div className="container" style="margin: 70px">
     <%= yield %>
+  </div>
   </body>
 </html>
