menu mvc added, get request from front end done

--- a/app/views/teppanyaki/index.html.erb
+++ b/app/views/teppanyaki/index.html.erb
@@ -25,7 +25,7 @@
 	    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 	    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
 	  </ol>
-	  <div class="carousel-inner" style="background-color: green">
+	  <div class="carousel-inner">
 	    <div class="carousel-item active">
 	      <img class="d-block w-100" src="https://i.picsum.photos/id/913/500/500.jpg" alt="First slide">
 	    </div>
@@ -85,6 +85,9 @@
 		</div>
 
 	</div>
+
 	<br/> <br/> <br/>
+
+
 </div>
 
