--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
   
   <div class="field">
     <%= f.label :address %><br />
-    <%= f.text_field :address, autofocus: true%>
+    <%= f.text_area :address, autofocus: true%>
   </div>
 
   <div class="field">
