--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,15 +13,21 @@
         <a class="nav-link" href="#">Meet Our Chefs</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Menu</a>
+        <a class="nav-link" href="../menus">Menu</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Login/Signup
+          Account
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <% if !user_signed_in? %>
           <a class="dropdown-item" href="../users/sign_in">Login</a>
           <a class="dropdown-item" href="../users/sign_up">Signup</a>
+          <% else %>
+
+          <a class="dropdown-item" href="/users/sign_out" data-method='delete'>Logout</a>
+          <a class="dropdown-item" href="../users/sign_up">My Bookings</a>
+          <% end %>
         </div>
       </li>
     </ul>
