done with the app

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -26,7 +26,7 @@
           <% else %>
 
           <a class="dropdown-item" href="/users/sign_out" data-method='delete'>Logout</a>
-          <a class="dropdown-item" href="../users/sign_up">My Bookings</a>
+          <a class="dropdown-item" href="../orders">My Bookings</a>
           <% end %>
         </div>
       </li>
