--- a/app/views/teppanyaki/index.html.erb
+++ b/app/views/teppanyaki/index.html.erb
@@ -27,13 +27,13 @@
 	  </ol>
 	  <div class="carousel-inner">
 	    <div class="carousel-item active">
-	      <img class="d-block w-100" src="https://i.picsum.photos/id/913/500/500.jpg" alt="First slide">
+	      <img class="d-block w-100" src="../../assets/images/teppanyaki1.jpg" alt="First slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100" src="https://i.picsum.photos/id/575/500/500.jpg" alt="Second slide">
+	      <img class="d-block w-100" src="../../assets/images/teppanyaki2.jpg" alt="Second slide">
 	    </div>
 	    <div class="carousel-item">
-	      <img class="d-block w-100" src="https://i.picsum.photos/id/639/500/500.jpg?hmac=72TmK0db_Z1aRXlm_bQbBdqsgBa-sFNN6vew4eSXYeI.jpg" alt="Third slide">
+	      <img class="d-block w-100" src="../../assets/images/teppanyaki3.jpg" alt="Third slide">
 	    </div>
 	  </div>
 	  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
